exports[`test Button changes state when clicked 1`] = `
<button
  onClick={[Function]}>
  false
</button>
`;

exports[`test Button changes state when clicked 2`] = `
<button
  onClick={[Function]}>
  true
</button>
`;
